test/error/OpOrEnumNoFlags.fu
enum Foo
{
	Bar,
	Quux
}

public static class Test
{
	public static bool Run()
	{
		Foo e = Foo.Bar | Foo.Quux; //ERROR: Define flags enumeration as 'enum* Foo'
		return true;
	}
}
